parser/tests/bad/expr02.st
% operand of 'sign' operation must have type 'int' or 'real'

const i := -"string"
